--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -1,35 +1,15 @@
 {
   "name": "Loomio assets",
   "dependencies": {
-    "angular": "~1.2.8",
-    "jquery": "~2.0.3",
-    "underscore": "~1.5.2",
-    "angular-route": "~1.2.8",
-    "sass-bootstrap": "~3.0.2",
-<<<<<<< Updated upstream
-    "font-awesome": "~4.0.3",
+    "angular": "latest",
+    "jquery": "~>2.1.1",
+    "lodash": "latest",
+    "angular-route": "1.3.0-rc.2",
+    "sass-bootstrap": "latest",
+    "font-awesome": "latest",
     "angular-bootstrap-datetimepicker": "latest",
-    "angular-cache": "~2.3.0",
-    "faye": "~1.0.0",
+    "angular-cache": "~>2.1.0",
+    "faye": "latest",
     "d3": "~3.4.0"
-||||||| merged common ancestors
-    "font-awesome": "~4.0.3"
-=======
-<<<<<<< Updated upstream
-    "font-awesome": "~4.0.3"
-||||||| merged common ancestors
-    "font-awesome": "~4.0.3",
-    "angular-bootstrap-datetimepicker": "latest",
-    "angular-cache": "~2.3.0",
-    "faye": "~1.0.0",
-    "d3": "~3.4.0"
-=======
-    "font-awesome": "~4.0.3",
-    "angular-bootstrap-datetimepicker": "latest",
-    "angular-cache": "~2.3.0",
-    "faye": "~1.0.0",
-    "d3": "~3.4.1"
->>>>>>> Stashed changes
->>>>>>> Stashed changes
   }
 }
