--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,10 +8,11 @@ CMD ["/sbin/my_init"]
 
 RUN rm -f /etc/service/nginx/down
 RUN rm /etc/nginx/sites-enabled/default
-ADD nginx.conf /etc/nginx/sites-enabled/loomio.conf
+ADD nginx_loomio.conf /etc/nginx/sites-enabled/loomio.conf
 
-ADD . /home/app/loomio
+RUN mkdir /home/app/loomio
 WORKDIR /home/app/loomio
+RUN git clone https://github.com/loomio/loomio.git .
 RUN chown -R app:app /home/app/loomio
 RUN sudo -u app bundle install --deployment
 RUN sudo -u app RAILS_ENV=production rake assets:precompile
