--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -1,20 +1,18 @@
 {
   "name": "Loomio assets",
   "dependencies": {
-    "angular": "latest",
-    "angular-sanitize": "latest",
-    "jquery": "~>2.1.1",
-    "lodash": "latest",
-    "angular-route": "1.3.0-rc.2",
-    "sass-bootstrap": "latest",
-    "font-awesome": "latest",
+    "angular": "~> 1.3.0",
+    "angular-sanitize": "~> 1.3.0",
+    "jquery": "~> 2.1.1",
+    "lodash": "~> 2.4.1",
+    "angular-route": "~> 1.3.0",
+    "bootstrap-sass-official": "~> 3.2.0",
+    "font-awesome": "~> 4.2.0",
     "angular-bootstrap-datetimepicker": "latest",
     "angular-cache": "~>2.1.0",
     "faye": "latest",
-    "d3": "~3.4.0",
     "angular-translate": "~2.4.0",
     "angular-translate-loader-url": "~2.4.0",
-    "tc-angular-chartjs": "~1.0.9",
-    "chartjs": "~0.2.0"
+    "tc-angular-chartjs": "~1.0.9"
   }
 }
