--- a/lineman/package.json
+++ b/lineman/package.json
@@ -27,6 +27,6 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-cucumber": "~0.2.3",
     "grunt-haml": "^0.9.0",
-    "grunt-sass": "~0.8.1"
+    "grunt-sass": "latest"
   }
 }
