--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -14,6 +14,7 @@
     "angular-translate": "~2.4.0",
     "angular-translate-loader-url": "~2.4.0",
     "tc-angular-chartjs": "~1.0.9",
-    "angular-markdown-directive": "~0.3.0"
+    "angular-markdown-directive": "~0.3.0",
+    "angular-bootstrap": "~0.11.2"
   }
 }
