--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -16,5 +16,6 @@
     "tc-angular-chartjs": "~1.0.9",
     "angular-markdown-directive": "~0.3.0",
     "angular-bootstrap": "~0.11.2"
+    "angular-file-upload": "latest"
   }
 }
