--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -13,9 +13,9 @@
     "faye": "latest",
     "angular-translate": "~2.4.0",
     "angular-translate-loader-url": "~2.4.0",
-    "tc-angular-chartjs": "~1.0.9",
     "angular-markdown-directive": "~0.3.0",
     "angular-bootstrap": "latest",
-    "ng-file-upload": "latest"
+    "ng-file-upload": "latest",
+    "tc-angular-chartjs": "~1.0.9"
   }
 }
