--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -17,6 +17,7 @@
     "angular-bootstrap": "latest",
     "ng-file-upload": "latest",
     "tc-angular-chartjs": "~1.0.9",
-    "ngInfiniteScroll": "~1.1.2"
+    "ngInfiniteScroll": "~1.1.2",
+    "ment.io": "~0.9.15"
   }
 }
