--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -6,8 +6,8 @@
     "jquery": "~> 2.1.1",
     "lodash": "~> 2.4.1",
     "angular-route": "~> 1.3.0",
-    "bootstrap-sass-official": "~> 3.2.0",
-    "font-awesome": "~> 4.2.0",
+    "bootstrap-sass-official": "~> 3.3.0",
+    "components-font-awesome": "~> 4.2.0",
     "angular-bootstrap-datetimepicker": "latest",
     "angular-cache": "~>2.1.0",
     "faye": "latest",
