--- a/lineman/package.json
+++ b/lineman/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-cucumber": "~0.2.3",
     "grunt-haml": "^0.9.0",
-    "grunt-sass": "latest"
+    "grunt-sass": "latest",
+    "lineman-bower": "0.0.5"
   }
 }
