--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ screenshots/
 /lineman/node_modules
 /lineman/dist
 /lineman/generated
-#/lineman/vendor/bower_components
+/lineman/vendor/bower_components
 .powenv
