--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -18,7 +18,8 @@
     "ng-file-upload": "latest",
     "tc-angular-chartjs": "~1.0.9",
     "ngInfiniteScroll": "~1.1.2",
-    "ment.io": "~0.9.15"
+    "ment.io": "~0.9.15",
+    "ngAnimate": "*"
   },
   "resolutions": {
     "angular": "~> 1.3.0"
