--- a/lineman/bower.json
+++ b/lineman/bower.json
@@ -19,7 +19,7 @@
     "tc-angular-chartjs": "~1.0.9",
     "ngInfiniteScroll": "~1.1.2",
     "ment.io": "~0.9.15",
-    "ngAnimate": "*"
+    "angular-animate": "1.3.0"
   },
   "resolutions": {
     "angular": "~> 1.3.0"
