--- a/lineman/package.json
+++ b/lineman/package.json
@@ -8,14 +8,15 @@
     "company": "DAVEMO Consulting"
   },
   "dependencies": {
-    "grunt-angular-templates": "0.3.8",
-    "grunt-ng-annotate": "latest",
-    "protractor": ">=0.8.0",
-    "jasmine-given": "~2.1.0",
-    "grunt": "~0.4.1",
-    "grunt-concat-sourcemap": "~0.3.0",
-    "lineman": ">=0.11.6",
     "coffee-script": "~1.6.3",
+    "grunt": "~0.4.1",
+    "grunt-angular-templates": "0.3.8",
+    "grunt-concat-sourcemap": "~0.3.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-ng-annotate": "latest",
+    "jasmine-given": "~2.1.0",
+    "lineman": ">=0.11.6",
+    "protractor": ">=0.8.0",
     "selenium-webdriver": "~2.38.1"
   },
   "engines": {
