--- a/lineman/package.json
+++ b/lineman/package.json
@@ -26,6 +26,7 @@
     "grunt-cucumber": "~0.2.3",
     "grunt-haml": "^0.9.0",
     "grunt-sass": "0.17.0",
+    "grunt-shell": "^1.1.1",
     "node-sass": "1.2.3",
     "protractor": ">=1.4.0",
     "selenium-webdriver": "~2.44.0"
