--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,7 +13,7 @@ default: &default
   omni_contacts_google_secret: <%= ENV['OMNI_CONTACTS_GOOGLE_SECRET'] %>
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  aws_attachments_bucket: <%= ENV['AWS_ATTACHMENTS_BUCKET'] %>
+  aws_bucket: <%= ENV['AWS_BUCKET'] %>
 
 development:
   <<: *default
@@ -26,7 +26,7 @@ test:
   devise: abc123
   aws_access_key_id: fakeaccesskeyid
   aws_secret_access_key: fakesecretaccesskey
-  aws_attachments_bucket: fakebucketname
+  aws_bucket: fakebucketname
 
 staging:
   <<: *default
