--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ rvm:
 before_script:
   - "cp config/database.yml.$DB config/database.yml"
   - "bundle exec rake db:create RAILS_ENV=test"
-  - "bundle exec rake db:schema:load RAILS_ENV=test"
+  #- "bundle exec rake db:schema:load RAILS_ENV=test"
   - "bundle exec rake db:seed RAILS_ENV=test"
   - "sh -e /etc/init.d/xvfb start"
 script: "bundle exec rake travis"
