Add support for signing up with Twitter

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -4,6 +4,8 @@ default: &default
   devise: <%= ENV['DEVISE_SECRET'] %>
   google_key: <%= ENV['GOOGLE_KEY'] %>
   google_secret: <%= ENV['GOOGLE_SECRET'] %>
+  twitter_key: <%= ENV['TWITTER_KEY'] %>
+  twitter_secret: <%= ENV['TWITTER_SECRET'] %>
   facebook_key: <%= ENV['FACEBOOK_KEY'] %>
   facebook_secret: <%= ENV['FACEBOOK_SECRET'] %>
   intercom_app_id: <%= ENV['INTERCOM_APP_ID'] %>
