--- a/lineman/package.json
+++ b/lineman/package.json
@@ -13,6 +13,7 @@
     "grunt-angular-templates": "0.5.7",
     "grunt-concat-sourcemap": "~0.4.3",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-exec": "^0.4.6",
     "grunt-ng-annotate": "latest",
     "lineman": ">=0.34.3"
   },
@@ -26,7 +27,6 @@
     "grunt-cucumber": "~0.2.3",
     "grunt-haml": "^0.9.0",
     "grunt-sass": "0.17.0",
-    "grunt-shell": "^1.1.1",
     "node-sass": "1.2.3",
     "protractor": ">=1.4.0",
     "selenium-webdriver": "~2.44.0"
