Revert "hopefully fix travis testing"
This reverts commit 5a25bb25d4add58f381ef4878457580955ff24c4.

Conflicts:
	.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,7 @@ rvm:
   - 2.2.0
 before_script:
   - "cp config/database.yml.$DB config/database.yml"
-  - "bundle exec rake db:create RAILS_ENV=test"
-  - "bundle exec rake db:migrate RAILS_ENV=test"
-  #- "bundle exec rake db:schema:load RAILS_ENV=test"
-  - "bundle exec rake db:seed RAILS_ENV=test"
+  - "bundle exec rake db:setup RAILS_ENV=test"
   - "sh -e /etc/init.d/xvfb start"
 script: "bundle exec rake travis"
 addons:
